# mujoco_tutorial

devel/: .catkin  local_setup.sh  setup.sh
devel/include/mujoco_ros_msgs/: JointInit.h  JointSet.h  JointState.h  SensorBase.h  SensorState.h  SimStatus.h  SimstatusM2C.h
devel/lib/icir_tutorial_pinocchio/: icir_tutorial_pinocchio_simulation
devel/lib/mujoco_ros/: mujoco_ros
devel/lib/pkgconfig/: icir_gen3_description.pc  icir_tutorial_pinocchio.pc  kortex_description.pc  mujoco_ros.pc  mujoco_ros_msgs.pc  realsense2_description.pc
devel/lib/python3/dist-packages/mujoco_ros_msgs/msg/: _JointInit.py  _JointSet.py  _JointState.py  _SensorBase.py  _SensorState.py  _SimStatus.py  _SimstatusM2C.py  __init__.py
devel/share/common-lisp/ros/mujoco_ros_msgs/msg/: JointInit.lisp  JointSet.lisp  JointState.lisp  SensorBase.lisp  SensorState.lisp  SimStatus.lisp  SimstatusM2C.lisp  _package.lisp  _package_JointInit.lisp  _package_JointSet.lisp  _package_JointState.lisp  _package_SensorBase.lisp  _package_SensorState.lisp  _package_SimStatus.lisp  _package_SimstatusM2C.lisp  mujoco_ros_msgs-msg.asd
devel/share/gennodejs/ros/mujoco_ros_msgs/msg/: JointInit.js  JointSet.js  JointState.js  SensorBase.js  SensorState.js  SimStatus.js  SimstatusM2C.js  _index.js
devel/share/icir_gen3_description/cmake/: icir_gen3_descriptionConfig.cmake
devel/share/icir_tutorial_pinocchio/cmake/: icir_tutorial_pinocchioConfig.cmake
devel/share/kortex_description/cmake/: kortex_descriptionConfig.cmake
devel/share/mujoco_ros/cmake/: mujoco_rosConfig.cmake
devel/share/mujoco_ros_msgs/cmake/: mujoco_ros_msgs-msg-paths.cmake  mujoco_ros_msgsConfig.cmake
devel/share/realsense2_description/cmake/: realsense2_descriptionConfig.cmake
devel/share/roseus/ros/mujoco_ros_msgs/: manifest.l
devel/share/roseus/ros/mujoco_ros_msgs/msg/: JointInit.l  JointSet.l  JointState.l  SensorBase.l  SensorState.l  SimStatus.l  SimstatusM2C.l
src/: 02_16.txt
src/franka_description/: CHANGELOG.rst  URDF2MJCF.txt  fr3v2.xml  package.xml  scene.xml
src/franka_description/meshes/nanoscan3/: NANS3.dae
src/franka_description/meshes/robots/fr3v2/visual/: link1.dae  link2.dae  link3.dae  link4.dae  link5.dae
src/franka_description/robots/common/: franka_arm.ros2_control.xacro  franka_robot.xacro  utils.xacro
src/franka_description/robots/fer/: fer.srdf.xacro  fer.urdf.xacro
src/franka_description/robots/fp3/: fp3.srdf.xacro  fp3.urdf.xacro
src/franka_description/robots/fr3/: fr3.srdf.xacro  fr3.urdf.xacro
src/franka_description/robots/fr3_duo/: fr3_duo.urdf.xacro
src/franka_description/robots/fr3v2/: fr3v2.srdf.xacro  fr3v2.urdf.xacro
src/franka_description/robots/fr3v2_1/: fr3v2_1.srdf.xacro  fr3v2_1.urdf.xacro
src/franka_description/robots/mobile_fr3_duo_v0_2/: mobile_fr3_duo_v0_2.urdf.xacro
src/franka_description/robots/tmrv0_2/: argo_drive.xacro  caster_wheel.xacro  lidar.xacro  tmrv0_2.ros2_control.xacro  tmrv0_2.urdf.xacro  tmrv0_2.xacro
src/franka_description/robots/tmrv0_2/nanoscan3/: nanoscan3.urdf.xacro
src/icir_gen3_robot_description/: README.md
src/icir_gen3_robot_description/icir_franka_fr3_v2/franka_fr3_v2/: fr3v2.urdf  fr3v2.xml
src/icir_gen3_robot_description/icir_gen3__description/: CMakeLists.txt
src/icir_gen3_robot_description/icir_gen3__description/6dof/urdf/: GEN3-6DOF_VISION_URDF_ARM_V01.urdf  GEN3-6DOF_VISION_URDF_ARM_V01.xml  gen3_robotiq_2f_140_d435.xacro  gen3_robotiq_2f_85_d435.xacro  kinova_arm_6dof.xml
src/icir_gen3_robot_description/icir_gen3__description/7dof/fr3v2_assets/: link0.stl  link0_0.stl  link0_1.stl  link0_2.stl  link0_3.stl  link0_4.stl  link0_5.stl  link1.stl  link1_0.stl  link1_1.stl  link1_2.stl  link1_3.stl  link2.stl  link2_0.stl  link2_1.stl  link2_2.stl  link2_3.stl  link3.stl  link3_0.stl  link3_1.stl  link3_2.stl  link3_3.stl  link4.stl  link4_0.stl  link4_1.stl  link4_2.stl  link4_3.stl  link5.stl  link5_0.stl  link5_1.stl  link5_2.stl  link5_3.stl  link5_4.stl  link6.stl  link6_0.stl  link6_1.stl  link6_2.stl  link6_3.stl  link6_4.stl  link6_5.stl  (+12 more)
src/icir_gen3_robot_description/icir_gen3__description/7dof/urdf/: GEN3_URDF_V12.urdf  GEN3_URDF_V12.xml  fr3v2.urdf  fr3v2.xml  kinova_arm.xml
src/icir_gen3_robot_description/kortex_description/launch/: visualize.launch
src/icir_gen3_robot_description/kortex_description/robots/: gen3.urdf  gen3_gz.urdf
src/icir_gen3_robot_description/kortex_description/rviz/: robot.rviz
src/icir_gen3_robot_description/kortex_description/script/: joint_state_publish_test.py
src/icir_mujoco_ros/: README.md
src/icir_mujoco_ros/mjpro200/include/: mjvisualize.h
src/icir_mujoco_ros/mujoco_ros/: CMakeLists.txt  package.xml
src/icir_mujoco_ros/mujoco_ros/include/: mjros.h
src/icir_mujoco_ros/mujoco_ros/src/: main.cpp  mjros.cpp
src/icir_mujoco_ros/mujoco_ros_msgs/: package.xml
src/icir_tutorial_pinocchio/: CMakeLists.txt  README.md  package.xml
src/icir_tutorial_pinocchio/config/: robot_params.yaml
src/icir_tutorial_pinocchio/include/icir_tutorial_pinocchio/: icir_tutorial_pinocchio_sim.hpp
src/icir_tutorial_pinocchio/launch/: icir_tutorial_pinocchio_simulation.launch
src/icir_tutorial_pinocchio/rqt/: icir_tutorial_pinocchio.perspective  revised.txt
src/icir_tutorial_pinocchio/rviz/: icir_tutorial_pinocchio.rviz
src/icir_tutorial_pinocchio/src/: icir_tutorial_pinocchio_sim.cpp
src/icir_tutorial_pinocchio/utility/: math_functions.hpp  urdf_to_pin.cpp  urdf_to_pin.hpp
(+2 files in other folders)
