<?xml version="1.0"?>
<package>
  <name>mujoco_ros_msgs</name>
  <version>0.0.0</version>
  <description>The mujoco_ros_msgs package</description>
  <!-- this package is originally from the dyros_red_mujoco package -->

  <maintainer email="js.park@cnu.ac.kr">Jinseong Park</maintainer>

  <license>BSD</license>  

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
  </export>
</package>
